Fixed user rating bugs on mobile devices

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1575,7 +1575,7 @@ textarea {
     }
 
     .movie-right {
-        margin-top: -100px;
+        margin-top: 0;
         height: 100% !important;
         overflow: visible;
         margin-bottom: 250px;
